[package]
name = "rs-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
base64ct = "1.6.0"
pkcs8 = "0.10.2"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["pem"]}
sha1 = "0.10.5"
sha2 = "0.10.7"
