[package]
name = "rs-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.68"
base64 = "0.21.2"
base64ct = "1.6.0"
pkcs8 = "0.10.2"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { version = "0.9.2", features = ["pem"]}
wnfs = { path = "../rs-wnfs/wnfs" }
